--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>Contact Me</h2>
         <div class="map">
             <!-- Embedded Google Map (example location) -->
-            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1511.2061413255587!2d-73.9796223417571!3d40.75295602669006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2590199a4c12d%3A0x35c4d69dd805cc5e!2sOne%20Vanderbilt!5e0!3m2!1sen!2sro!4v1674472555170!5m2!1sen!2sro" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.7645531213243!2d107.30613017461144!3d16.638581623945694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314101f42fe7063f%3A0xddf5d809bed158b8!2zTMOgbmcgY-G7lSBQaMaw4bubYyBUw61jaCAtIFBodW9jIFRpY2ggQW5jaWVudCB2aWxsYWdl!5e0!3m2!1svi!2s!4v1693560897251!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <form id="contact-form" class="contact-form">
             <label for="name">Name:</label>
