--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h1>Welcome to My Website!</h1>
         <p>This is a brief intro to my personal site. Feel free to explore the content below.</p>
         <div class="welcome-images">
-            <img src="https://via.placeholder.com/300" alt="Placeholder image 1">
-            <img src="https://via.placeholder.com/300" alt="Placeholder image 2">
+            <img src="https://images.unsplash.com/photo-1518773553398-650c184e0bb3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML coding">
+            <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="HTML coding 2">
         </div>
         <button class="cta-button">Learn More</button>
     </section>
