--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="https://via.placeholder.com/150" alt="A placeholder image for about section">
+                <img src="https://plus.unsplash.com/premium_photo-1739786996022-5ed5b56834e2?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="An avatar">
             </div>
             <div class="about-text">
                 <p>Here is some text about me or my features. This section contains information alongside an image.</p>
@@ -64,9 +64,9 @@
         <div class="carousel">
             <button class="prev" aria-label="Previous slide">&#10094;</button>
             <div class="slides">
-                <img src="https://via.placeholder.com/400x200?text=Slide+1" alt="Slide 1">
-                <img src="https://via.placeholder.com/400x200?text=Slide+2" alt="Slide 2">
-                <img src="https://via.placeholder.com/400x200?text=Slide+3" alt="Slide 3">
+                <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c" alt="Slide 1">
+                <img src="https://images.unsplash.com/photo-1590595906931-81f04f0ccebb?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 2">
+                <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c" alt="Slide 3">
             </div>
             <button class="next" aria-label="Next slide">&#10095;</button>
         </div>
@@ -77,7 +77,7 @@
         <h2>Contact Me</h2>
         <div class="map">
             <!-- Embedded Google Map (example location) -->
-            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.7645531213243!2d107.30613017461144!3d16.638581623945694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314101f42fe7063f%3A0xddf5d809bed158b8!2zTMOgbmcgY-G7lSBQaMaw4bubYyBUw61jaCAtIFBodW9jIFRpY2ggQW5jaWVudCB2aWxsYWdl!5e0!3m2!1svi!2s!4v1693560897251!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.4513595563095!2d108.2029608!3d16.0544077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142188b7a96d8fd%3A0xeba24b0a9346d723!2sDa%20Nang%2C%20Vietnam!5e0!3m2!1sen!2sus!4v1693562000000!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <form id="contact-form" class="contact-form">
             <label for="name">Name:</label>
