--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img src="https://plus.unsplash.com/premium_photo-1739786996022-5ed5b56834e2?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="An avatar">
             </div>
             <div class="about-text">
-                <p>Here is some text about me or my features. This section contains information alongside an image.</p>
+                <p>Hi, my name is Quang Tung and this is my portfolio.</p>
             </div>
         </div>
     </section>
@@ -52,9 +52,9 @@
     <section id="features" class="features-section">
         <h2>My Features</h2>
         <ul>
-            <li><input type="checkbox" id="feature1"><label for="feature1">Feature One</label></li>
-            <li><input type="checkbox" id="feature2"><label for="feature2">Feature Two</label></li>
-            <li><input type="checkbox" id="feature3"><label for="feature3">Feature Three</label></li>
+            <li><input type="checkbox" id="feature1"><label for="feature1">Passionate about technology</label></li>
+            <li><input type="checkbox" id="feature2"><label for="feature2">Creative problem solver</label></li>
+            <li><input type="checkbox" id="feature3"><label for="feature3">Bilingual</label></li>
         </ul>
     </section>
 
