--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header with logo and navigation -->
     <header>
         <div class="logo">MyLogo</div>
-        <nav role="navigation" aria-label="Main navigation">
+        <nav aria-label="Main navigation">
             <ul class="nav-links">
                 <li><a href="#welcome">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -77,7 +77,7 @@
         <h2>Contact Me</h2>
         <div class="map">
             <!-- Embedded Google Map (example location) -->
-            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.4513595563095!2d108.2029608!3d16.0544077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142188b7a96d8fd%3A0xeba24b0a9346d723!2sDa%20Nang%2C%20Vietnam!5e0!3m2!1sen!2sus!4v1693562000000!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe title="Google Map of location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.4513595563095!2d108.2029608!3d16.0544077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142188b7a96d8fd%3A0xeba24b0a9346d723!2sDa%20Nang%2C%20Vietnam!5e0!3m2!1sen!2sus!4v1693562000000!5m2!1sen!2sus" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <form id="contact-form" class="contact-form">
             <label for="name">Name:</label>
